apps/flask-mongo2/flask/service.yml
apiVersion: v1
kind: Service
metadata:
  name: v1-docker
  namespace: app1
spec:
  selector:
    app: v1
  ports:
  - portName: 5555-tcp
    port: 5555
    protocol: TCP
    targetPort: 5555
  type: ClusterIP
