apps/flask-mongo2/flask/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: v1-docker
  namespace: app1
spec:
  port:
    targetPort: 5555-tcp
  to:
    kind: Service
    name: v1-docker
    weight: 100
